RESOLVED FIXED319822
[CMake] macOS build broke after 317523@main (redefinition of 'windowWithDoubleClickEventListener')
https://bugs.webkit.org/show_bug.cgi?id=319822
Summary [CMake] macOS build broke after 317523@main (redefinition of 'windowWithDoubl...
Abrar Rahman Protyasha
Reported 2026-07-20 10:10:57 PDT
PositionInformationForWebPage.mm:628:40: error: redefinition of 'windowWithDoubleClickEventListener'
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-20 10:11:03 PDT
Abrar Rahman Protyasha
Comment 2 2026-07-20 10:24:43 PDT
EWS
Comment 3 2026-07-20 12:02:05 PDT
Committed 317555@main (3b6bc22d817d): <https://commits.webkit.org/317555@main> Reviewed commits have been landed. Closing PR #69789 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.