[CMake] macOS build broke after 317523@main (redefinition of 'windowWithDoubleClickEventListener') https://bugs.webkit.org/show_bug.cgi?id=319822 rdar://182720554

Reviewed by Taher Ali and Zak Ridouh.

After windowWithDoubleClickEventListener() moved from WebPageIOS to
WebPageCocoa, the CMake builds started failing because there were two
identical definitions in WebPageCocoa and PositionInformationForWebPage,
respectively. This produced a collision when both of these files ended
up in the same unified source bundle.

This patch addresses the error by consolidating as a LocalFrame method
instead.

* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::windowWithDoubleClickEventListener const):
* Source/WebCore/page/LocalFrame.h:
* Source/WebKit/WebProcess/WebPage/Cocoa/PositionInformationForWebPage.mm:
(WebKit::positionInformationForWebPage):
(WebKit::windowWithDoubleClickEventListener): Deleted.
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::handleDoubleTapForDoubleClickAtPoint):
(WebKit::windowWithDoubleClickEventListener): Deleted.

Canonical link: https://commits.webkit.org/317555@main